# icp

./: .clang-format  .clang-tidy  .gitignore  AUTHOR.md  Brewfile  CMakeLists.txt  CevIcpConfig.cmake.in  Doxyfile  INSTALL.md  LICENSE  Makefile  README.md  README.md.build  cmake_uninstall.cmake.in  commitlint.config.js  explainer.md  main.cpp  test  view.conf
.github/workflows/: ci.yaml  docs.yml  lint.yaml  pr.yaml
bench/: bench.cpp
book/: desmos.txt  developing.md  icp.tex  main.md  writing_icp.md
book/icp_descr/: icp_feature_aware.md  icp_trimmed.md  icp_vanilla.md
book/icp_descr/extra/: sources.md
book2/: explainer.md
common/: parse_ply.cpp  parse_scan.cpp  parse_scan.h
doc_new/: ADD_ICP_INSTANCE.md
docs/: annotated.html  classKDTree-members.html  classKDTree.html  classLidarView-members.html  classLidarView.html  classes.html  classicp_1_1FeatureAware-members.html  classicp_1_1FeatureAware.html  classicp_1_1ICP-members.html  classicp_1_1ICP.html  classicp_1_1ICPDriver-members.html  classicp_1_1ICPDriver.html  classicp_1_1ICP_1_1Config-members.html  classicp_1_1ICP_1_1Config.html  classicp_1_1Trimmed-members.html  classicp_1_1Trimmed.html  classicp_1_1Vanilla-members.html  classicp_1_1Vanilla.html  classicp__doc__builder_1_1ICPDocumentationBuilder-members.html  classicp__doc__builder_1_1ICPDocumentationBuilder.html  classicp__math_1_1Match-members.html  classicp__math_1_1Match.html  classicp__math_1_1RigidBodyTransform-members.html  classicp__math_1_1RigidBodyTransform.html  dir_5ba998bec3831bd658c4991b03a0da20.html  dir_5dc04ed0352335c2e4b6b6e98ca2d291.html  dir_6549bedf82156dc06df95cefb015444e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77ed5d2219998d344159b76e1e3a4ef7.html  dir_7b63dab485b2753ac9ee90fb2fccf90c.html  dir_7c0873e6b80b34380e48b0b11ab08777.html  dir_8d1d95dbc7d02cb623156dfadb124d7c.html  dir_8d4e19156fe4cd3c5022b400ffcde04b.html  dir_8f1fa8d81d244d870266a518fe327bf6.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b11dea735a166eca9c79fb414c2dda10.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eb024e11eb1ee27b38affebfff122eda.html  driver_8cpp.html  driver_8cpp_source.html  (+89 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+60 more)
ex_data/ply/: Queen_result.ply  queen.ply  queen_transformed.ply
ex_data/scan1/: first.csv  second.csv
ex_data/scan2/: first.csv  second.csv
ex_data/scan3/: first.conf  first.csv  second.conf  second.csv
include/algo/: kdtree.h  quickselect.h
include/icp/: config.h  dim.h  driver.h  geo.h  icp.h  icp_driver.h  neighbor.h  parse_ply.h  registry.h
include/icp/driver/: driver.h
include/icp/impl/: feature_aware.h  not_icp.h  trimmed.h  trimmed_3d.h  vanilla.h  vanilla_3d.h
install/: Makefile
lib/algo/: kdtree.cpp
lib/icp/: driver.cpp  geo.cpp  icp.cpp  icp_driver.cpp  registry.cpp
lib/icp/impl/: feature_aware.cpp  not_icp.cpp  trimmed.cpp  trimmed_3d.cpp  vanilla.cpp  vanilla_3d.cpp
script/: .gitignore  icp_doc_builder.py  icp_math.py  pyproject.toml  readme.py  rosbag_extract.py
src/: main.cpp
src/icp/: icp.cpp  icp.h
src/icp/impl/: test1.cpp  trimmed.cpp  vanilla.cpp
src/sim/: lidar_view.cpp  lidar_view.h
test/: test.cpp
tests/: test.cpp  test3d.cpp  test_ply.cpp
vis/: lidar_view.cpp  lidar_view.h  main.cpp  view_config.cpp  view_config.h
